feat(core): components: brx-avatar (#3)
Closes #3

--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -62,7 +62,7 @@
 
     <hr />
 
-    <!-- <section>
+    <section>
       <h1>Avatar</h1>
 
       <hr />
@@ -70,7 +70,37 @@
       <brx-avatar> </brx-avatar>
       <brx-avatar size="medium" name="Frederico"> </brx-avatar>
       <brx-avatar size="large" name="Pedro" src="https://picsum.photos/id/287/400"> </brx-avatar>
-    </section> -->
+
+      <!-- TODO: Exemplo com o componente Sign-in -->
+
+      <!-- <div>
+        <brx-dropdown>
+          <brx-dropdown-trigger target="#avatar-menu">
+            <button class="br-sign-in" type="button" id="avatar-dropdown-trigger" aria-label="Avatar com dropdown">
+              <brx-avatar name="Fulano da Silva" content-class="bg-orange-vivid-30 text-pure-0"> </brx-avatar>
+              <span class="ml-2 text-gray-80 text-weight-regular"> Olá, <span class="text-weight-semi-bold">Fulano</span> </span>
+              <brx-icon name="fa5/fas/caret-down"></brx-icon>
+            </button>
+          </brx-dropdown-trigger>
+
+          <brx-list id="avatar-menu" hidden="hidden">
+            <brx-item pass-styles> </brx-item>
+            <brx-item pass-styles>
+              <a href="javascript:void(0)">Dados pessoais</a>
+            </brx-item>
+            <brx-item pass-styles>
+              <a href="javascript:void(0)">Privacidade</a>
+            </brx-item>
+            <brx-item pass-styles>
+              <a href="javascript:void(0)">Notificações</a>
+            </brx-item>
+            <brx-item pass-styles>
+              <a href="javascript:void(0)">Perguntas frequentes</a>
+            </brx-item>
+          </brx-list>
+        </brx-dropdown>
+      </div> -->
+    </section>
 
     <!-- Button -->
 
