--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -62,6 +62,8 @@
 
     <hr />
 
+    <!-- Avatar -->
+
     <section>
       <h1>Avatar</h1>
 
@@ -73,14 +75,18 @@
 
       <!-- TODO: Exemplo com o componente Sign-in -->
 
-      <!-- <div>
+      <div>
         <brx-dropdown>
           <brx-dropdown-trigger target="#avatar-menu">
-            <button class="br-sign-in" type="button" id="avatar-dropdown-trigger" aria-label="Avatar com dropdown">
-              <brx-avatar name="Fulano da Silva" content-class="bg-orange-vivid-30 text-pure-0"> </brx-avatar>
-              <span class="ml-2 text-gray-80 text-weight-regular"> Olá, <span class="text-weight-semi-bold">Fulano</span> </span>
-              <brx-icon name="fa5/fas/caret-down"></brx-icon>
-            </button>
+            <brx-button signin="avatar">
+              <brx-signin>
+                <div slot="content">
+                  <brx-avatar name="Fulano da Silva" content-class="bg-orange-vivid-30 text-pure-0"> </brx-avatar>
+                  <span class="ml-2 text-gray-80 text-weight-regular"> Olá, <span class="text-weight-semi-bold">Fulano</span> </span>
+                  <brx-icon name="fa5/fas/caret-down"></brx-icon>
+                </div>
+              </brx-signin>
+            </brx-button>
           </brx-dropdown-trigger>
 
           <brx-list id="avatar-menu" hidden="hidden">
@@ -99,7 +105,7 @@
             </brx-item>
           </brx-list>
         </brx-dropdown>
-      </div> -->
+      </div>
     </section>
 
     <!-- Button -->
@@ -946,7 +952,7 @@
               <brx-item button>
                 <div class="content">
                   <div class="flex-fill">RÓTULO 01</div>
-                  <brx-icon name="fa5/fas/angle-down"></brx-icon>
+                  <brx-icon name="fa5/fas/angle-down" data-collapse-icon></brx-icon>
                 </div>
               </brx-item>
             </brx-collapse-trigger>
@@ -984,7 +990,7 @@
               <brx-item button>
                 <div class="content">
                   <div class="flex-fill">RÓTULO 02</div>
-                  <brx-icon name="fa5/fas/angle-down"></brx-icon>
+                  <brx-icon name="fa5/fas/angle-down" data-collapse-icon></brx-icon>
                 </div>
               </brx-item>
             </brx-collapse-trigger>
@@ -1022,7 +1028,7 @@
               <brx-item button>
                 <div class="content">
                   <div class="flex-fill">RÓTULO 03</div>
-                  <brx-icon name="fa5/fas/angle-down"></brx-icon>
+                  <brx-icon name="fa5/fas/angle-down" data-collapse-icon></brx-icon>
                 </div>
               </brx-item>
             </brx-collapse-trigger>
@@ -1109,7 +1115,7 @@
                 <brx-item button>
                   <div class="content">
                     <div class="flex-fill">RÓTULO 01</div>
-                    <brx-icon name="fa5/fas/angle-down"></brx-icon>
+                    <brx-icon name="fa5/fas/angle-down" data-collapse-icon></brx-icon>
                   </div>
                 </brx-item>
               </brx-collapse-trigger>
@@ -1144,7 +1150,7 @@
                 <brx-item button>
                   <div class="content">
                     <div class="flex-fill">RÓTULO 02</div>
-                    <brx-icon name="fa5/fas/angle-down"></brx-icon>
+                    <brx-icon name="fa5/fas/angle-down" data-collapse-icon></brx-icon>
                   </div>
                 </brx-item>
               </brx-collapse-trigger>
@@ -1178,7 +1184,7 @@
                 <brx-item button>
                   <div class="content">
                     <div class="flex-fill">RÓTULO 03</div>
-                    <brx-icon name="fa5/fas/angle-down"></brx-icon>
+                    <brx-icon name="fa5/fas/angle-down" data-collapse-icon></brx-icon>
                   </div>
                 </brx-item>
               </brx-collapse-trigger>
@@ -1271,6 +1277,146 @@
           <brx-radio name="rex2" label="Oi" value="c" invalid></brx-radio>
           <brx-radio name="rex2" label="Oi" value="d" valid></brx-radio>
         </brx-radio-group>
+      </div>
+    </section>
+
+    <hr />
+
+    <!-- Sign-in -->
+
+    <section>
+      <h1>Sign-in</h1>
+
+      <div>
+        <h2>Ênfase Primária</h2>
+
+        <div>
+          <brx-button signin variant="primary">
+            <brx-signin show-icon show-label></brx-signin>
+          </brx-button>
+        </div>
+      </div>
+
+      <div>
+        <h2>Ênfase Secundária</h2>
+
+        <div>
+          <brx-button signin>
+            <brx-signin show-icon show-label></brx-signin>
+          </brx-button>
+        </div>
+      </div>
+
+      <div>
+        <h2>Tipo Icônico Primário</h2>
+
+        <div>
+          <brx-button signin circle variant="primary">
+            <brx-signin show-icon show-label="false"></brx-signin>
+          </brx-button>
+        </div>
+      </div>
+
+      <div>
+        <h2>Ênfase Primária, Secundária e Tipo Icônico com Fundo Escuro</h2>
+
+        <div class="p-3 mb-3 bg-primary-darken-02">
+          <brx-button signin dark-mode variant="primary">
+            <brx-signin show-icon show-label></brx-signin>
+          </brx-button>
+        </div>
+
+        <div class="p-3 mb-3 bg-primary-darken-02">
+          <brx-button signin dark-mode>
+            <brx-signin show-icon show-label></brx-signin>
+          </brx-button>
+        </div>
+
+        <div class="p-3 mb-3 bg-primary-darken-02">
+          <brx-button signin circle dark-mode>
+            <brx-signin show-icon show-label="false"></brx-signin>
+          </brx-button>
+        </div>
+      </div>
+
+      <div>
+        <h2>Tipos Interno</h2>
+
+        <div>
+          <brx-button signin variant="primary">
+            <brx-signin show-icon show-label></brx-signin>
+          </brx-button>
+        </div>
+      </div>
+
+      <div>
+        <h2>Tipos Externo com Texto</h2>
+
+        <div>
+          <brx-button signin variant="primary">
+            <brx-signin>
+              <div slot="content">Entrar com&nbsp;<span class="text-black">gov.br</span></div>
+            </brx-signin>
+          </brx-button>
+        </div>
+      </div>
+
+      <div>
+        <h2>Tipos Externo com Imagem</h2>
+
+        <div>
+          <brx-button signin>
+            <brx-signin>
+              <div slot="content">Entrar com&nbsp;<img src="https://www.gov.br/++theme++padrao_govbr/img/govbr-colorido-b.png" alt="gov.br" /></div>
+            </brx-signin>
+          </brx-button>
+        </div>
+      </div>
+
+      <div>
+        <h2>Densidade - Alta</h2>
+
+        <div>
+          <brx-button signin variant="primary" size="small">
+            <brx-signin>
+              <div slot="content">Entrar com&nbsp;<span class="text-black">gov.br</span></div>
+            </brx-signin>
+          </brx-button>
+        </div>
+      </div>
+
+      <div>
+        <h2>Densidade - Alta</h2>
+
+        <div>
+          <brx-button signin variant="primary" size="medium">
+            <brx-signin>
+              <div slot="content">Entrar com&nbsp;<span class="text-black">gov.br</span></div>
+            </brx-signin>
+          </brx-button>
+        </div>
+      </div>
+
+      <div>
+        <h2>Densidade - Baixa</h2>
+
+        <div>
+          <brx-button signin variant="primary" size="large">
+            <brx-signin>
+              <div slot="content">Entrar com&nbsp;<span class="text-black">gov.br</span></div>
+            </brx-signin>
+          </brx-button>
+        </div>
+      </div>
+
+      <div>
+        <h2>Tipo Bloco</h2>
+
+        <div>
+          <brx-button signin block>
+            <brx-signin show-icon show-label></brx-signin>
+          </brx-button>
+        </div>
       </div>
     </section>
 
