feat(core): components: brx-accordion-trigger (#30)
Closes #30

--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -31,6 +31,148 @@
   <body>
     <hr />
 
+    <!-- Accordion -->
+
+    <section>
+      <h1>Accordion</h1>
+
+      <div>
+        <brx-list data-sub="data-sub">
+          <brx-accordion-trigger group="a" tabindex="0" target="#a-l1">
+            <brx-item button>
+              <div class="content">
+                <div class="flex-fill">RÓTULO 01</div>
+                <brx-icon data-collapse-icon name="fa5/fas/angle-down"></brx-icon>
+              </div>
+            </brx-item>
+          </brx-accordion-trigger>
+
+          <brx-list data-sub="data-sub" hidden="hidden" id="a-l1">
+            <brx-item>
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <brx-icon name="fa5/fas/heartbeat"></brx-icon>
+                </div>
+                <div class="col">Sub-item</div>
+              </div>
+            </brx-item>
+
+            <brx-divider></brx-divider>
+
+            <brx-item>
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <brx-icon name="fa5/fas/heartbeat"></brx-icon>
+                </div>
+                <div class="col">Sub-item</div>
+              </div>
+            </brx-item>
+
+            <brx-divider></brx-divider>
+
+            <brx-item>
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <brx-icon name="fa5/fas/heartbeat"></brx-icon>
+                </div>
+                <div class="col">Sub-item</div>
+              </div>
+            </brx-item>
+
+            <brx-divider></brx-divider>
+          </brx-list>
+
+          <brx-accordion-trigger group="a" tabindex="0" target="#a-l2">
+            <brx-item button>
+              <div class="content">
+                <div class="flex-fill">RÓTULO 02</div>
+                <brx-icon data-collapse-icon name="fa5/fas/angle-down"></brx-icon>
+              </div>
+            </brx-item>
+          </brx-accordion-trigger>
+
+          <brx-list data-sub="data-sub" hidden="hidden" id="a-l2">
+            <brx-item>
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <brx-icon name="fa5/fas/heartbeat"></brx-icon>
+                </div>
+                <div class="col">Sub-item</div>
+              </div>
+            </brx-item>
+
+            <brx-divider></brx-divider>
+
+            <brx-item>
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <brx-icon name="fa5/fas/heartbeat"></brx-icon>
+                </div>
+                <div class="col">Sub-item</div>
+              </div>
+            </brx-item>
+
+            <brx-divider></brx-divider>
+
+            <brx-item>
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <brx-icon name="fa5/fas/heartbeat"></brx-icon>
+                </div>
+                <div class="col">Sub-item</div>
+              </div>
+            </brx-item>
+
+            <brx-divider></brx-divider>
+          </brx-list>
+
+          <brx-accordion-trigger group="a" tabindex="0" target="#a-l3">
+            <brx-item button>
+              <div class="content">
+                <div class="flex-fill">RÓTULO 03</div>
+                <brx-icon data-collapse-icon name="fa5/fas/angle-down"></brx-icon>
+              </div>
+            </brx-item>
+          </brx-accordion-trigger>
+
+          <brx-list data-sub="data-sub" hidden="hidden" id="a-l3">
+            <brx-item>
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <brx-icon name="fa5/fas/heartbeat"></brx-icon>
+                </div>
+                <div class="col">Sub-item</div>
+              </div>
+            </brx-item>
+
+            <brx-divider></brx-divider>
+
+            <brx-item>
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <brx-icon name="fa5/fas/heartbeat"></brx-icon>
+                </div>
+                <div class="col">Sub-item</div>
+              </div>
+            </brx-item>
+
+            <brx-divider></brx-divider>
+
+            <brx-item>
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <brx-icon name="fa5/fas/heartbeat"></brx-icon>
+                </div>
+                <div class="col">Sub-item</div>
+              </div>
+            </brx-item>
+
+            <brx-divider></brx-divider>
+          </brx-list>
+        </brx-list>
+      </div>
+    </section>
+
     <!-- Accordion (legado) -->
 
     <section>
