feat(core): components: brx-button magic #42
Closes #43

--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -2094,6 +2094,46 @@
 
     <hr />
 
+    <!-- Magic Button -->
+
+    <section>
+      <h1>Magic Button</h1>
+
+      <div>
+        <h2>Texto</h2>
+
+        <brx-button magic>Label</brx-button>
+      </div>
+
+      <div>
+        <h2>Ícone</h2>
+
+        <brx-button circle magic type="button" aria-label="Adicionar">
+          <brx-icon name="fa5/fas/cart-plus"></brx-icon>
+        </brx-button>
+      </div>
+
+      <div>
+        <h2>Densidade - Alta</h2>
+
+        <brx-button magic size="small">Label</brx-button>
+      </div>
+
+      <div>
+        <h2>Densidade - Média</h2>
+
+        <brx-button magic size="medium">Label</brx-button>
+      </div>
+
+      <div>
+        <h2>Densidade - Baixa</h2>
+
+        <brx-button magic size="large">Label</brx-button>
+      </div>
+    </section>
+
+    <hr />
+
     <!-- Message -->
 
     <section>
