--- a/packages/core/src/html/index.html
+++ b/packages/core/src/html/index.html
@@ -2495,6 +2495,81 @@
 
     <hr />
 
+    <!-- Skip Link -->
+
+    <section>
+      <h1>Skip Link</h1>
+
+      <div>
+        <h2>Tipo Simples</h2>
+
+        <div>
+          <p>Para visualizar o comportamento dos links use a tecla "tab" do teclado.</p>
+
+          <brx-skiplink>
+            <brx-item pass-styles>
+              <a href="#main-content" accesskey="1">
+                Ir para o conteúdo (1/4)
+                <span class="br-tag text ml-1">1</span>
+              </a>
+            </brx-item>
+            <brx-item pass-styles>
+              <a href="#header-navigation" accesskey="2">
+                Ir para o menu (2/4)
+                <span class="br-tag text ml-1">2</span>
+              </a>
+            </brx-item>
+            <brx-item pass-styles>
+              <a href="#main-searchbox" accesskey="3">
+                Ir para a busca (3/4)
+                <span class="br-tag text ml-1">3</span>
+              </a>
+            </brx-item>
+            <brx-item pass-styles>
+              <a href="#footer" accesskey="4">
+                Ir para o rodapé (4/4)
+                <span class="br-tag text ml-1">4</span>
+              </a>
+            </brx-item>
+          </brx-skiplink>
+        </div>
+      </div>
+
+      <div>
+        <h2>Tipo Composto</h2>
+
+        <div>
+          <p>Para visualizar o comportamento dos links use a tecla "tab" do teclado.</p>
+          <brx-skiplink full>
+            <brx-item pass-styles="">
+              <a class="br-item" href="#main-content" accesskey="1">
+                Ir para o conteúdo
+                <brx-tag class="text ml-1">1</brx-tag>
+              </a>
+            </brx-item>
+            <brx-item pass-styles="">
+              <a class="br-item" href="#header-navigation" accesskey="2">
+                Ir para o menu
+                <brx-tag class="text ml-1">2</brx-tag>
+              </a>
+            </brx-item>
+            <brx-item pass-styles="">
+              <a class="br-item" href="#main-searchbox" accesskey="3">
+                Ir para a busca
+                <brx-tag class="text ml-1">3</brx-tag>
+              </a>
+            </brx-item>
+            <brx-item pass-styles="">
+              <a class="br-item" href="#footer" accesskey="4">
+                Ir para o rodapé
+                <brx-tag class="text ml-1">4</brx-tag>
+              </a>
+            </brx-item>
+          </brx-skiplink>
+        </div>
+      </div>
+    </section>
+
     <!-- Tag -->
 
     <section>
